# gh-release-test

./: README.md  pyproject.toml
.github/: add-to-project-issues.yml
.github/ISSUE_TEMPLATE/: test_checkbox.yml  test_issue.yml
.github/workflows/: release.yaml  shared-release.yaml
