[tool.poetry]
name = "gh-release-test"
version = "0.1.0"
description = ""
authors = ["Luis Alvergue <lalver1@gmail.com>"]
readme = "README.md"
packages = [{include = "gh_release_test"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
